chore: ease up some biome rules

--- a/biome.json
+++ b/biome.json
@@ -51,8 +51,8 @@
         "noInferrableTypes": "error",
         "noNamespace": "error",
         "noNegationElse": "warn",
-        "noNonNullAssertion": "error",
-        "noParameterAssign": "error",
+        "noNonNullAssertion": "warn",
+        "noParameterAssign": "warn",
         "noUnusedTemplateLiteral": "error",
         "noUselessElse": "warn",
         "useBlockStatements": "error",
@@ -114,7 +114,6 @@
         "noClassAssign": "error",
         "noCommentText": "error",
         "noCompareNegZero": "error",
-        "noConsole": "warn",
         "noConstEnum": "error",
         "noControlCharactersInRegex": "error",
         "noDoubleEquals": "error",
@@ -144,7 +143,7 @@
         "noUnsafeFinally": "error",
         "noUnsafeOptionalChaining": "error",
         "noUnusedLabels": "error",
-        "noUnusedVariables": "error",
+        "noUnusedVariables": "off",
         "useExhaustiveDependencies": "error",
         "useHookAtTopLevel": "error",
         "useIsNan": "error",
