refactor: bit handler utils and start ot add pop up number menu

--- a/biome.json
+++ b/biome.json
@@ -55,7 +55,7 @@
         "noParameterAssign": "warn",
         "noUnusedTemplateLiteral": "error",
         "noUselessElse": "warn",
-        "useBlockStatements": "error",
+        "useBlockStatements": "warn",
         "useCollapsedElseIf": "error",
         "useConst": "error",
         "useDefaultParameterLast": "error",
@@ -118,7 +118,7 @@
         "noControlCharactersInRegex": "error",
         "noDoubleEquals": "error",
         "noDuplicateCase": "error",
-        "noEmptyBlockStatements": "error",
+        "noEmptyBlockStatements": "warn",
         "noFallthroughSwitchClause": "error",
         "noFunctionAssign": "error",
         "noGlobalAssign": "error",
