--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.6",
