--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "use-long-press": "^3.3.0",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
