--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
+    "clsx": "^2.1.1",
     "immer": "^11.1.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
@@ -28,11 +29,11 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.6",
     "@chromatic-com/storybook": "^4.1.3",
-    "@storybook/addon-a11y": "^10.1.0",
-    "@storybook/addon-docs": "^10.1.0",
-    "@storybook/addon-onboarding": "^10.1.0",
-    "@storybook/addon-vitest": "^10.1.0",
-    "@storybook/react-vite": "^10.1.0",
+    "@storybook/addon-a11y": "^10.1.11",
+    "@storybook/addon-docs": "^10.1.11",
+    "@storybook/addon-onboarding": "^10.1.11",
+    "@storybook/addon-vitest": "^10.1.11",
+    "@storybook/react-vite": "^10.1.11",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -46,7 +47,7 @@
     "globals": "^16.5.0",
     "jsdom": "^27.2.0",
     "playwright": "^1.57.0",
-    "storybook": "^10.1.0",
+    "storybook": "^10.1.11",
     "typescript": "~5.9.3",
     "vite": "^7.2.2",
     "vitest": "^4.0.14"
