--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@vitest/browser-playwright": "^4.0.14",
     "@vitest/coverage-v8": "^4.0.14",
     "globals": "^16.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "jsdom": "^27.2.0",
     "playwright": "^1.57.0",
     "storybook": "^10.1.11",
