--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@redux-devtools/extension": "^3.3.0",
     "clsx": "^2.1.1",
     "immer": "^11.1.3",
+    "open-props": "^1.7.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
