--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
+    "@tailwindcss/vite": "^4.1.18",
     "clsx": "^2.1.1",
     "immer": "^11.1.3",
     "open-props": "^1.7.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "tailwindcss": "^4.1.18",
     "use-long-press": "^3.3.0",
     "zustand": "^5.0.9"
   },
