--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"] /* Shadcn/ui */,
+      "@types": ["src/types.ts"]
     }
   }
 }
