test: add tests for localStorageHelper
- Includes mocking the actual localStorage with a helper library

--- a/biome.json
+++ b/biome.json
@@ -53,7 +53,7 @@
         "noNegationElse": "warn",
         "noNonNullAssertion": "warn",
         "noParameterAssign": "warn",
-        "noUnusedTemplateLiteral": "error",
+        "noUnusedTemplateLiteral": "off",
         "noUselessElse": "warn",
         "useBlockStatements": "warn",
         "useCollapsedElseIf": "error",
