--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "storybook": "^10.1.11",
     "typescript": "~5.9.3",
     "vite": "^7.2.2",
-    "vitest": "^4.0.14"
+    "vitest": "^4.0.14",
+    "vitest-localstorage-mock": "^0.1.2"
   }
 }
