feat: first cut of useDifficulty with tests
- Still needs DRY'ing up
- Tests missing for helper new helper functions

--- a/biome.json
+++ b/biome.json
@@ -52,7 +52,7 @@
         "noNamespace": "error",
         "noNegationElse": "warn",
         "noNonNullAssertion": "warn",
-        "noParameterAssign": "warn",
+        "noParameterAssign": "off",
         "noUnusedTemplateLiteral": "off",
         "noUselessElse": "warn",
         "useBlockStatements": "warn",
