--- a/package.json
+++ b/package.json
@@ -59,11 +59,18 @@
     "globals": "^16.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^27.2.0",
+    "msw": "^2.12.10",
+    "msw-storybook-addon": "^2.0.6",
     "playwright": "^1.57.0",
     "storybook": "^10.1.11",
     "typescript": "~5.9.3",
     "vite": "^7.2.2",
     "vitest": "^4.0.14",
     "vitest-localstorage-mock": "^0.1.2"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
