chore: turn off noDebugger rule
- So we can run debugger in our IDE - else it was removing it on save... so annoying

--- a/biome.json
+++ b/biome.json
@@ -101,7 +101,7 @@
       },
       "suspicious": {
         "noExplicitAny": "error",
-        "noDebugger": "error",
+        "noDebugger": "off",
         "noDuplicateJsxProps": "error",
         "noDuplicateObjectKeys": "error",
         "noDuplicateParameters": "error",
