--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.4.0",
+    "shadcn": "^3.8.5",
+    "tailwind-merge": "^3.5.0",
     "tailwindcss": "^4.1.18",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
